--- a/PS07/crmdemo.html
+++ b/PS07/crmdemo.html
@@ -12,7 +12,7 @@
   <script src="https://sdk-cdn.mypurecloud.com/client-apps/2.6.7/purecloud-client-app-sdk.js"></script>
 
 		
-<title>UBS CRM Demo</title>
+<title>CRM Demo</title>
 <!--<script type="text/javascript" src="jquery-3.3.1.min.js">-->
 
 
@@ -26,7 +26,7 @@
    .gen-callback-customer-logo {
     display: block;
     width: 1337px;
-    height: 296px;
+    height: 696px;
     background: url(genesys-com-full-color.svg) no-repeat center;
    }
    label {
