--- a/PS07/crmdemo.html
+++ b/PS07/crmdemo.html
@@ -61,7 +61,7 @@
         </noscript>
 
   
-	  <h1><i class="gen-callback-customer-logo" style="font-size:48px;"></i>UBS CRM Demo</h1>
+	  <h1><i class="gen-callback-customer-logo" style="font-size:48px;"></i>CRM Demo</h1>
 
 	<fieldset>
 	<br></br>
