--- a/PS07/crmdemo.html
+++ b/PS07/crmdemo.html
@@ -25,9 +25,9 @@
    }
    .gen-callback-customer-logo {
     display: block;
-    width: 655px;
-    height: 121px;
-    background: url(genesys-com-full-color.svg) no-repeat center;
+    width: 180px;
+    height: 150px;
+    background: url(genesys.jpg) no-repeat center;
    }
    label {
     width: 80px;
