--- a/PS07/crmdemo.html
+++ b/PS07/crmdemo.html
@@ -96,8 +96,9 @@
 const platformClient = require('platformClient');
 
 const client = platformClient.ApiClient.instance;
-let conversationId = '73e22507-062a-477b-880b-05f8d4ea2c78'; // String | conversation ID
-let ani = '+';
+client.setPersistSettings(true);
+let conversationId = ''; // String | conversation ID
+let ani = '';
 let ticketid='';
 
 // API instances
